# kapp/jupiter/Makefile.am

include $(top_srcdir)/kapp_common.am

lib_LTLIBRARIES = libjupiter.la
libjupiter_la_SOURCES = awesome.cpp $(top_srcdir)/include/jupiter.hpp
libjupiter_la_LDFLAGS = -version-info 0:1:0

# libjupiter_la_CPPFLAGS = -I$(top_srcdir)/include
# libjupit_la_LIBADD = ../include/libjupiter.a
